--- a/client/src/components/FolderTree/FolderTree.css
+++ b/client/src/components/FolderTree/FolderTree.css
@@ -52,8 +52,11 @@
   background-color: var(--bg-tertiary);
 }
 
-.folder-header.selected, .file-header.selected {
+.folder-header.selected, .file-item.selected {
   background-color: rgba(40, 42, 201, 0.2);
+  position: relative;
+  z-index: 1;
+  box-shadow: inset 0 0 0 1px rgba(40, 42, 201, 0.1);
 }
 
 .folder-icon, .file-icon {
@@ -125,7 +128,7 @@
 }
 
 /* Folder type indicators */
-.folder-item[data-type="music"] .folder-name {
+/* .folder-item[data-type="music"] .folder-name {
   color: #5db8ff;
 }
 
@@ -137,7 +140,6 @@
   color: #76e089;
 }
 
-/* File type indicators */
 .file-item[data-type="music"] .file-name {
   color: #5db8ff;
 }
@@ -148,4 +150,33 @@
 
 .file-item[data-type="ambience"] .file-name {
   color: #76e089;
+} */
+
+/* Separation between consecutive selected items */
+.file-item.selected + .file-item.selected::before{
+  content: '';
+  height: 1px;
+  background: linear-gradient(to right, transparent, rgba(40, 42, 201, 0.3), transparent);
+  position: absolute;
+  top: 0;
+  left: 10%;
+  right: 10%;
+  z-index: 2;
+}
+
+/* Subtle pattern for consecutive selected items to create visual interest */
+.file-item.selected:nth-child(odd) .file-header {
+  background-color: rgba(40, 42, 201, 0.2);
+}
+
+.file-item.selected:nth-child(even) .file-header,
+.folder-header.selected:nth-child(even) {
+  background-color: rgba(40, 42, 201, 0.15);
+}
+
+/* Slight left border accent for selected items */
+.file-item.selected .file-header,
+.folder-header.selected {
+  border-left: 3px solid rgba(40, 42, 201, 0.5);
+  padding-left: 5px;
 }
