--- a/client/src/pages/SoundManager/components/SoundManager.css
+++ b/client/src/pages/SoundManager/components/SoundManager.css
@@ -16,14 +16,27 @@
   min-height: 70vh;
 }
 
-.folder-navigation {
+.debug-editing-mode-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: var(--bg-secondary);
+  border: none;
+  color: var(--text-secondary);
+  padding: 0.5rem;
+  cursor: pointer;
+  z-index: 10;
+}
+
+.sound-manager-left-panel {
   position: relative;
   display: flex;
   flex-direction: column;
   flex: 0 0 300px;
   max-width: 350px;
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
   border-right: none;
+  padding-bottom: 50px;
 }
 
 .sound-manager-controls {
@@ -40,42 +53,21 @@
   z-index: 5;
 }
 
-.folder-navigation {
-  padding-bottom: 50px;
+.layout-horizontal-separator {
+  width: 100%;
+  height: 1px;
+  background-color: var(--border-color);
+  position: relative;
 }
 
-.folder-navigation .folder-tree-container {
-  max-height: fit-content;
-  border: none;
-  box-shadow: none;
-  background-color: transparent;
-  padding: 5px;
-  margin: 0;
-  max-width: 100%;
-  border-bottom: 1px solid var(--border-color);
-}
-
-.layout-separator {
+.layout-vertical-separator {
   margin-left: 0;
   width: 1px;
   background-color: var(--border-color);
   position: relative;
 }
 
-/* Handle */
-.layout-separator::after {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 4px;
-  height: 40px;
-  border-radius: 5px;
-  background-color: var(--border-color-light);
-}
-
-.content-display {
+.sound-manager-main-area {
   flex: 1;
   overflow-y: auto;
   display: flex;
@@ -85,7 +77,7 @@
 }
 
 .content-inner {
-  padding: 2rem;
+  padding-inline: 4rem;
   flex: 1;
 }
 
@@ -100,7 +92,7 @@
     flex-direction: column;
   }
 
-  .folder-navigation {
+  .sound-manager-left-panel {
     flex: none;
     max-width: 100%;
     border-right: none;
