--- a/client/src/pages/SoundManager/components/CollectionView/components/CollectionsGrid.css
+++ b/client/src/pages/SoundManager/components/CollectionView/components/CollectionsGrid.css
@@ -2,14 +2,7 @@
   width: 100%;
   height: 100%;
   position: relative;
-  padding: 1.5rem;
-}
-
-.collection-view .audio-item-grid{
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(175px, 1fr));
-  gap: 1.5rem;
-  padding: 0.5rem;
+  padding: 2rem 1rem;
 }
 
 /* Create Collection Card */
@@ -17,16 +10,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   text-align: center;
   padding: 1rem;
   gap: 1rem;
   color: var(--text-secondary);
+  height: 100%;
 }
 
 .create-collection-icon {
-  font-size: 2rem;
-  width: 30px;
-  height: 30px;
+  font-size: 1.5rem;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   border: 2px dashed var(--border-color);
   display: flex;
@@ -47,6 +42,10 @@
 }
 
 .create-collection-card:hover .create-collection-content {
+  color: var(--accent-primary);
+}
+
+.create-collection-card:hover .create-collection-text {
   color: var(--accent-primary);
 }
 
