--- a/client/src/pages/SoundManager/components/SoundManager.css
+++ b/client/src/pages/SoundManager/components/SoundManager.css
@@ -32,14 +32,24 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  flex: 0 0 300px;
-  max-width: 350px;
-  /* overflow-y: hidden; */
+  flex: 0 0 320px;
+  overflow-y: hidden;
   border-right: none;
-  padding-bottom: 50px;
 }
 
-.sound-manager-controls {
+.sound-manager-left-panel .seperator-handle {
+  border : 1px solid var(--border-color);
+}
+.sound-manager-left-panel .audio-item-table{
+  max-width: 320px;
+}
+
+.sound-manager-left-panel .play-bar{
+  position: absolute;
+  bottom: 0;
+}
+
+/* .sound-manager-controls {
   position: absolute;
   display: flex;
   bottom: 0;
@@ -51,19 +61,19 @@
   background-color: var(--bg-secondary);
   border-top: 1px solid var(--border-color);
   z-index: 5;
-}
+} */
 
 .layout-horizontal-separator {
   width: 100%;
-  height: 1px;
-  background-color: var(--border-color);
+  height: 4px;
+  background-color: var(--border-color-light);
   position: relative;
 }
 
 .layout-vertical-separator {
   margin-left: 0;
   width: 1px;
-  background-color: var(--border-color);
+  background-color: var(--border-color-light);
   position: relative;
 }
 
@@ -77,7 +87,7 @@
 }
 
 .content-inner {
-  padding-inline: 4rem;
+  /* padding-inline: 4rem; */
   flex: 1;
 }
 
