--- a/client/src/pages/SoundManager/components/CollectionItemsDisplay/components/ItemActions.css
+++ b/client/src/pages/SoundManager/components/CollectionItemsDisplay/components/ItemActions.css
@@ -47,22 +47,38 @@
     color: var(--text-primary);
     border: 1px solid var(--border-color);
     border-radius: 4px;
-    padding: 0.5rem 0.75rem;
+    padding: 0.25rem 0.25rem;
     font-size: 1rem;
     transition: all 0.2s ease;
     position: relative; 
     z-index: 2; 
 }
 
-.edit-button.small, 
 .delete-button.small {
     background: transparent;
     color: var(--text-secondary);
     border: 1px solid var(--border-color);
     border-radius: 4px;
-    padding: 0rem 0.3rem;
-    font-size: 1.2rem;
+    padding: 0rem 0.2rem;
+    font-size: 1.1rem;
 }
+
+.edit-button.small {
+    background: transparent;
+    color: var(--text-secondary);
+    border: 1px solid var(--border-color);
+    border-radius: 4px;
+    padding: 0.1rem 0.1rem;
+    
+}
+
+.edit-button.small svg{
+    position: relative;
+    top: 2px;
+    font-size: 14px;
+}
+
+
 
 .edit-button:hover,
 .edit-button.small:hover {
